# python-plugin

./: .prototools  CHANGELOG.md  Cargo.toml  README.md  releases.json
.github/workflows/: release.yml
scripts/: generateReleases.mjs
src/: lib.rs  proto.rs  version.rs
tests/: globals_test.rs  metadata_test.rs  shims_test.rs  versions_test.rs
tests/snapshots/: shims_test__creates_global_shims-2.snap  shims_test__creates_global_shims-2.snap.new  shims_test__creates_global_shims.snap  shims_test__creates_shims.snap
