[package]
name = "python_plugin"
version = "0.5.0"
edition = "2021"
license = "MIT"
publish = false

[lib]
crate-type = ['cdylib']

[dependencies]
extism-pdk = "0.3.4"
proto_pdk = { version = "0.12.2" }                                           # , path = "../../proto/crates/pdk" }
regex = { version = "1.10.2", default-features = false, features = ["std"] }
serde = "1.0.193"

[dev-dependencies]
proto_pdk_test_utils = { version = "0.14.4" }       # , path = "../../proto/crates/pdk-test-utils" }
starbase_sandbox = "0.1.12"
tokio = { version = "1.35.1", features = ["full"] }

[features]
default = ["wasm"]
wasm = []

[profile.release]
codegen-units = 1
debug = false
lto = true
opt-level = "s"
panic = "abort"
