[package]
name = "python_plugin"
version = "0.8.0"
edition = "2021"
license = "MIT"
publish = false

[lib]
crate-type = ['cdylib']

[dependencies]
extism-pdk = { version = "1.1.0" }
proto_pdk = { version = "0.17.1" }                                           #, path = "../../proto/crates/pdk" }
regex = { version = "1.10.3", default-features = false, features = ["std"] }
serde = "1.0.197"

[dev-dependencies]
proto_pdk_test_utils = { version = "0.19.1" }       #, path = "../../proto/crates/pdk-test-utils" }
starbase_sandbox = "0.4.0"
tokio = { version = "1.36.0", features = ["full"] }

[features]
default = ["wasm"]
wasm = []

[profile.release]
codegen-units = 1
debug = false
lto = true
opt-level = "s"
panic = "abort"
